kubernetes/03-port-forward-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: telemetry.netlogo.org
      http:
        paths:
          - backend:
              service:
                name: app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
